--- a/app/common/base/src/main/resources/messages_en_US.properties
+++ b/app/common/base/src/main/resources/messages_en_US.properties
@@ -1,12 +1,21 @@
 ErrorCode.ILLEGAL_ARGUMENT=Illegal argument
+
 ErrorCode.SPACE_DUPLICATE_KEY=Duplicate space name
-ErrorCode.SUB_SPACE_DUPLICATE_KEY=Duplicate subspace name
 ErrorCode.HTTP_INTERFACE_DUPLICATE_KEY=Duplicate request method and uri
 ErrorCode.HTTP_INTERFACE_BRANCH_SCRIPT_DUPLICATE_KEY=Duplicate branch name
-ErrorCode.HTTP_INTERFACE_CALLBACK_REQUEST_HEADER_DUPLICATE_KEY=Duplicate callback request header
-ErrorCode.HTTP_INTERFACE_RESPONSE_HEADER_DUPLICATE_KEY=Duplicate response header
+ErrorCode.HTTP_INTERFACE_CALLBACK_REQUEST_HEADER_DUPLICATE_KEY=Duplicate callback HTTP request header
+ErrorCode.HTTP_INTERFACE_RESPONSE_HEADER_DUPLICATE_KEY=Duplicate HTTP response header
+
 ErrorCode.SPACE_NOT_FOUND=Space not found
-ErrorCode.SUB_SPACE_NOT_FOUND=Subspace not found
 ErrorCode.HTTP_INTERFACE_NOT_FOUND=Http interface not found
 ErrorCode.HTTP_INTERFACE_BRANCH_SCRIPT_NOT_FOUND=Http interface branch script not found
+
+ErrorCode.SPACE_LEVEL_TOO_DEEP=Space level too deep
+ErrorCode.CANT_INSERT_INTERFACE_UNDER_THIS_SPACE_LEVEL=Can not insert interface under this space level
+
+ErrorCode.SYNC_DELAY_TOO_LARGE=Sync delay too large
+ErrorCode.ASYNC_DELAY_TOO_LARGE=Async delay too large
+ErrorCode.HTTP_INTERFACE_NOT_STARTED=HTTP interface not started
+ErrorCode.UNKNOWN_CONFIG_MODE=Unknown config mode
+
 ErrorCode.UNEXPECTED_ERROR=Unknown error
