return all http interface while space id is null

--- a/app/common/base/src/main/resources/messages_zh_CN.properties
+++ b/app/common/base/src/main/resources/messages_zh_CN.properties
@@ -17,5 +17,6 @@ ErrorCode.SYNC_DELAY_TOO_LARGE=同步延时超过阈值
 ErrorCode.ASYNC_DELAY_TOO_LARGE=异步延时超过阈值
 ErrorCode.HTTP_INTERFACE_NOT_STARTED=HTTP接口未开启
 ErrorCode.UNKNOWN_CONFIG_MODE=未知的配置模式
+ErrorCode.GROOVY_RUNTIME_EXCEPTION=Groovy脚本运行时错误
 
 ErrorCode.UNEXPECTED_ERROR=未知错误
