--- a/app/common/base/src/main/resources/messages_en_US.properties
+++ b/app/common/base/src/main/resources/messages_en_US.properties
@@ -17,5 +17,6 @@ ErrorCode.SYNC_DELAY_TOO_LARGE=Sync delay too large
 ErrorCode.ASYNC_DELAY_TOO_LARGE=Async delay too large
 ErrorCode.HTTP_INTERFACE_NOT_STARTED=HTTP interface not started
 ErrorCode.UNKNOWN_CONFIG_MODE=Unknown config mode
+ErrorCode.GROOVY_RUNTIME_EXCEPTION=Groovy runtime exception
 
 ErrorCode.UNEXPECTED_ERROR=Unknown error
