add path param in HttpInterfaceDetail && add url param in HttpInterfaceDigest && add SuccessMsg && add HostInfo api

--- a/common/base/src/main/resources/messages_en_US.properties
+++ b/common/base/src/main/resources/messages_en_US.properties
@@ -1,3 +1,4 @@
+# ErrorCode
 ErrorCode.ILLEGAL_ARGUMENT=Illegal argument
 
 ErrorCode.SPACE_DUPLICATE_KEY=Duplicate space name
@@ -20,3 +21,13 @@ ErrorCode.UNKNOWN_CONFIG_MODE=Unknown config mode
 ErrorCode.GROOVY_RUNTIME_EXCEPTION=Groovy runtime exception
 
 ErrorCode.UNEXPECTED_ERROR=Unknown error
+
+# SuccessMsg
+SuccessMsg.SPACE_INSERT_SUCCESS=Space create successfully
+SuccessMsg.SPACE_UPDATE_SUCCESS=Space update successfully
+SuccessMsg.SPACE_DELETE_SUCCESS=Space delete successfully
+SuccessMsg.HTTP_INTERFACE_INSERT_SUCCESS=HTTP interface create successfully
+SuccessMsg.HTTP_INTERFACE_UPDATE_SUCCESS=HTTP interface update successfully
+SuccessMsg.HTTP_INTERFACE_DELETE_SUCCESS=HTTP interface delete successfully
+SuccessMsg.HTTP_INTERFACE_START_SUCCESS=HTTP interface start successfully
+SuccessMsg.HTTP_INTERFACE_SHUTDOWN_SUCCESS=HTTP interface shutdown successfully
