--- a/common/base/src/main/resources/messages_zh_CN.properties
+++ b/common/base/src/main/resources/messages_zh_CN.properties
@@ -1,3 +1,4 @@
+# ErrorCode
 ErrorCode.ILLEGAL_ARGUMENT=参数格式错误
 
 ErrorCode.SPACE_DUPLICATE_KEY=空间名已被使用
@@ -20,3 +21,13 @@ ErrorCode.UNKNOWN_CONFIG_MODE=未知的配置模式
 ErrorCode.GROOVY_RUNTIME_EXCEPTION=Groovy脚本运行时错误
 
 ErrorCode.UNEXPECTED_ERROR=未知错误
+
+# SuccessMsg
+SuccessMsg.SPACE_INSERT_SUCCESS=空间创建成功
+SuccessMsg.SPACE_UPDATE_SUCCESS=空间更新成功
+SuccessMsg.SPACE_DELETE_SUCCESS=空间删除成功
+SuccessMsg.HTTP_INTERFACE_INSERT_SUCCESS=HTTP接口创建成功
+SuccessMsg.HTTP_INTERFACE_UPDATE_SUCCESS=HTTP接口更新成功
+SuccessMsg.HTTP_INTERFACE_DELETE_SUCCESS=HTTP接口删除成功
+SuccessMsg.HTTP_INTERFACE_START_SUCCESS=HTTP接口开启成功
+SuccessMsg.HTTP_INTERFACE_SHUTDOWN_SUCCESS=HTTP接口关闭成功
