add http interface conflict detection api

--- a/common/base/src/main/resources/messages_en_US.properties
+++ b/common/base/src/main/resources/messages_en_US.properties
@@ -18,7 +18,7 @@ ErrorCode.SYNC_DELAY_TOO_LARGE=Sync delay too large
 ErrorCode.ASYNC_DELAY_TOO_LARGE=Async delay too large
 ErrorCode.HTTP_INTERFACE_NOT_STARTED=HTTP interface not started
 ErrorCode.UNKNOWN_CONFIG_MODE=Unknown config mode
-ErrorCode.GROOVY_RUNTIME_EXCEPTION=Groovy runtime exception
+ErrorCode.GROOVY_SCRIPT_EXEC_EXCEPTION=Groovy script exec exception
 
 ErrorCode.UNEXPECTED_ERROR=Unknown error
 
