--- a/common/base/src/main/resources/messages_zh_CN.properties
+++ b/common/base/src/main/resources/messages_zh_CN.properties
@@ -15,6 +15,7 @@ ResultCode.ILLEGAL_ARGUMENT=参数错误
 ResultCode.PERMISSION_DENIED=权限不足
 ResultCode.HTTP_INTERFACE_NOT_OPEN=HTTP接口未开启
 ResultCode.GROOVY_SCRIPT_EXEC_EXCEPTION=Groovy脚本执行错误
+ResultCode.FAILED_TO_CAST_GROOVY_SCRIPT_EXEC_RESULT_TO_STRING=无法将Groovy脚本执行结果转换为字符串
 
 # DUPLICATE_KEY
 ResultCode.DUPLICATE_KEY_SPACE=空间名已被占用
@@ -31,5 +32,9 @@ ResultCode.NOT_FOUND_HTTP_INTERFACE_BRANCH=找不到相应HTTP接口分支
 # CAN_NOT
 ResultCode.CAN_NOT_CREATE_SPACE_UNDER_THIS_LEVEL=无法在该层级下创建空间
 ResultCode.CAN_NOT_CREATE_INTERFACE_UNDER_THIS_LEVEL=无法在该层级下创建HTTP接口
+
+# EXCEEDING_THRESHOLD
+ResultCode.EXCEEDING_THRESHOLD_SYNC_DELAY=同步延时超出阈值
+ResultCode.EXCEEDING_THRESHOLD_ASYNC_DELAY=异步延时超出阈值
 
 ResultCode.UNEXPECTED_ERROR=未知错误
