--- a/common/base/src/main/resources/messages_zh_CN.properties
+++ b/common/base/src/main/resources/messages_zh_CN.properties
@@ -14,8 +14,11 @@ ResultCode.SUCCESS_SHUTDOWN_HTTP_INTERFACE=HTTP接口关闭成功
 ResultCode.ILLEGAL_ARGUMENT=参数错误
 ResultCode.PERMISSION_DENIED=权限不足
 ResultCode.HTTP_INTERFACE_NOT_OPEN=HTTP接口未开启
-ResultCode.GROOVY_SCRIPT_EXEC_EXCEPTION=Groovy脚本执行错误
-ResultCode.FAILED_TO_CAST_GROOVY_SCRIPT_EXEC_RESULT_TO_STRING=无法将Groovy脚本执行结果转换为字符串
+
+# GROOVY
+ResultCode.GROOVY_RUNTIME_EXCEPTION=Groovy脚本运行时错误
+ResultCode.GROOVY_COMPILE_EXCEPTION=Groovy脚本编译时错误
+ResultCode.FAILED_TO_CONVERT_GROOVY_EXEC_RESULT_TO_STRING=无法将Groovy脚本执行结果转换为字符串
 
 # DUPLICATE_KEY
 ResultCode.DUPLICATE_KEY_SPACE=空间名已被占用
